# P2PTorrenting

./: .gitignore  CMakeLists.txt  Dockerfile.bootstrap  Dockerfile.client  Dockerfile.index  README.md  ToDo.txt  bootstrap2.txt  client1.txt  commands.txt  config.json  cross-platform-build-script.sh  docker-compose.heartbeat.yml  docker-compose.yml  index.txt  index1.txt  index2.txt
6882/: pedestrian.torrent
6883/: DOOM1.torrent
aws scripts/: bootstrap-compose.sh  bootstrap-scp.sh  client-scp.sh  client_ips.txt  compose-down.sh  cross-platform-build-script.sh  deploy-client.sh  deploy.sh  docker-compose.bootstrap.yml  docker-compose.client.yml  scp.sh  setup.sh  startup.sh  static_ips.txt
aws_scripts/: bootstrap-compose.sh  bootstrap-scp.sh  client-compose.sh  client-scp.sh  client-setup.sh  client_ips.txt  compose-down.sh  docker-compose.bootstrap.yml  docker-compose.client.yml  full-compose-up.sh  randomize_dirs.sh  setup_random_ec2_dirs.sh  static_ips.txt
docker_directories/: setup.sh
docker_directories/client1_torrents/: pedestrian.torrent
docker_directories/client2_torrents/: pedestrian.torrent
frontend/: package-lock.json
frontend/src/: App.jsx  BootstrapNode.jsx  ClientNode.jsx
src/: CMakeCache.txt  bootstrap_node.cpp  bootstrap_node.h  client.cpp  client.h  main.cpp  server.cpp
src/Gossip/: gossip.cpp  gossip.hpp
src/bootstrap/: bootstrap_heartbeat.cpp  bootstrap_heartbeat.hpp  bootstrap_node.cpp  bootstrap_node.h  bootstrap_node.hpp  main.cpp
src/client/: client.cpp  client.h  client.hpp  client_test.cpp  gui_main.cpp  main.cpp  mainwindow.cpp  mainwindow.hpp  piece_tracker.cpp  torrentlistmodel.cpp  torrentlistmodel.hpp
src/gossip/: bootstrap_heartbeat.cpp  bootstrap_heartbeat.hpp  gossip.cpp  gossip.hpp  gossip.proto  index_heartbeat.cpp  index_heartbeat.hpp  lamport.cpp  lamport.hpp
src/gossiping/: gossip.hpp
src/index/: index.cpp  index.hpp  index.proto  index_main.cpp  messenger.cpp  messenger.hpp
src/node/: node.cpp  node.hpp
